# iMpolyga

./: .gitignore  app.json
client/: App.js  App_old.js  package-lock.json  package.json
client/src/actions/: map.js  test-action.js
client/src/communiation/: error.js  index.js  initialize.js  map-callbacks.js
client/src/componenets/TESTS/: TestButton.js  TestLabel.js
client/src/componenets/game_objects/: plane.js  world.js
client/src/componenets/scene/: background.js
client/src/extras/: music.js
client/src/model/: Map.js
client/src/model/tiles/: grass.js  mountain.js  ocean.js  tile-generator.js  tile.js
client/src/model/tribes/: killer_girls.js  thunder_gods.js  tribe.js
client/src/reducers/: map.js  test-reducer.js  tile.js
client/src/store/: index.js
server/: Cargo.toml
server/src/: actor.rs  client_node.rs  communication.rs  connection_coordinator.rs  context.rs  main.rs  user_connection.rs
server/src/communication/: endpoints.rs  messages.rs  websocket.rs
server/src/model/: map.rs
