[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-files = "0.5"
actix = "0.10"
actix-web-actors = "3.0"
actix-cors = "0.5.4"
tera = "1.6"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
actix-identity = "0.3.1"
actix-utils = "3.0.0"
rand = "0.8"
base64 = "0.13.0"
env_logger = "0.8"
identicon-rs = "2.0"
defaultmap = "0.5"
prometheus = "0.12"
