[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
warp = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"